.provarCaches/00D5f000005vwGkEAI/objects/rstk__pellc__c.object
<CustomObject>
    <description>pellc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_comppeitemids__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>comppeitemids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_hasbom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>pellc_hasbom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_haschildren__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>haschildren</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>icitem</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Low Level Code</relationshipLabel>
        <relationshipName>pellcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ITEM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_llc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LLC</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_peitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>peitem_ui</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>Low Level Code</relationshipLabel>
        <relationshipName>PELLCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_peitemid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>peitemid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pellc_reordermrpplanpolicy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>reordermrpplanpolicy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Low Level Code</label>
    <listViews>
        <fullName>rstk__RS_Low_Level_Code</fullName>
        <columns>NAME</columns>
        <columns>rstk__pellc_item__c</columns>
        <columns>rstk__pellc_llc__c</columns>
        <columns>rstk__pellc_peitem__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__pellc_icitem__c</columns>
        <filterScope>Everything</filterScope>
        <label>Low Level Code</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PELLC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Low Level Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>